images paths fix

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             <form class="profile-settings__row">
               <div class="profile-settings__item-avatar">
                 <div class="profile-settings__avatar" id="imgAva">
-                  <img data-value="0" src="../img/avatar/user/avatar.png" alt="nickname" id="imgAvaImg">
+                  <img data-value="0" src="img/avatar/user/avatar.png" alt="nickname" id="imgAvaImg">
                 </div>
               </div>
               <div class="profile-settings__item">
@@ -679,7 +679,7 @@
               <ul class="modal-payment__cards cards">
                 <li class="modal-payment__card payment-system">
                   <div class="payment-system__img payment-system__img_big">
-                    <img src="../img/gallery/cards.png" alt="Visa/Master/Мир">
+                    <img src="img/gallery/cards.png" alt="Visa/Master/Мир">
                   </div>
                   <div class="payment-system__title">
                     Visa/Master/Мир
@@ -687,7 +687,7 @@
                 </li>
                 <li class="modal-payment__card payment-system">
                   <div class="payment-system__img">
-                    <img src="../img/gallery/qivi.png" alt="qivi">
+                    <img src="img/gallery/qivi.png" alt="qivi">
                   </div>
                   <div class="payment-system__title">
                     Киви кошелёк
@@ -697,7 +697,7 @@
                 </li>
                 <li class="modal-payment__card payment-system">
                   <div class="payment-system__img">
-                    <img src="../img/gallery/yumani.png" alt="ЮMoney">
+                    <img src="img/gallery/yumani.png" alt="ЮMoney">
                   </div>
                   <div class="payment-system__title">
                     ЮMoney
@@ -707,7 +707,7 @@
                 </li>
                 <li class="modal-payment__card payment-system">
                   <div class="payment-system__img">
-                    <img src="../img/gallery/Apple-pay.png" alt="Apple pay">
+                    <img src="img/gallery/Apple-pay.png" alt="Apple pay">
                   </div>
                   <div class="payment-system__title">
                     Apple pay
@@ -717,7 +717,7 @@
                 </li>
                 <li class="modal-payment__card payment-system">
                   <div class="payment-system__img">
-                    <img src="../img/gallery/Google-pay.png" alt="Google pay">
+                    <img src="img/gallery/Google-pay.png" alt="Google pay">
                   </div>
                   <div class="payment-system__title">
                     Google pay
@@ -727,7 +727,7 @@
                 </li>
                 <li class="modal-payment__card payment-system">
                   <div class="payment-system__img">
-                    <img src="../img/gallery/Samsung-pay.png" alt="Samsung pay">
+                    <img src="img/gallery/Samsung-pay.png" alt="Samsung pay">
                   </div>
                   <div class="payment-system__title">
                     Samsung pay
@@ -766,7 +766,7 @@
           </a>
           <div class="smiley amount-selection__smiley">
             <div class="smiley__img">
-              <img src="../img/gallery/smiley.png" alt="смайлик">
+              <img src="img/gallery/smiley.png" alt="смайлик">
             </div>
             <div class="smiley__text">
               - Чем больше берешь, <br> тем дешевле выходит!
@@ -807,7 +807,7 @@
 
               <div class="mod-arrow amount-selection__right">
                 <svg>
-                  <use xlink:href="../img/icons/sprite.svg#arrow-slider"></use>
+                  <use xlink:href="img/icons/sprite.svg#arrow-slider"></use>
                 </svg>
               </div>
               <div class="swiper amount-selection__checkbox">
@@ -817,7 +817,7 @@
                       value="Visa/Master/Мир" checked>
                     <label for="selectionCard" class="amount-selection__card payment-system">
                       <div class="payment-system__img payment-system__img_big">
-                        <img src="../img/gallery/cards.png" alt="Visa/Master/Мир">
+                        <img src="img/gallery/cards.png" alt="Visa/Master/Мир">
                       </div>
                       <div class="payment-system__title">
                         Visa/Master/Мир
@@ -830,7 +830,7 @@
                       value="Qiwi кошелёк">
                     <label for="Qiwi" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/qivi.png" alt="Qiwi кошелёк">
+                        <img src="img/gallery/qivi.png" alt="Qiwi кошелёк">
                       </div>
                       <div class="payment-system__title">
                         Qiwi кошелёк
@@ -841,7 +841,7 @@
                     <input type="radio" class="amount-selection__check" id="yumani" name="paymentSystem" value="ЮMoney">
                     <label for="yumani" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/yumani.png" alt="ЮMoney">
+                        <img src="img/gallery/yumani.png" alt="ЮMoney">
                       </div>
                       <div class="payment-system__title">
                         ЮMoney
@@ -853,7 +853,7 @@
                       value="Webmoney">
                     <label for="Webmoney" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/Webmoney.png" alt="Webmoney">
+                        <img src="img/gallery/Webmoney.png" alt="Webmoney">
                       </div>
                       <div class="payment-system__title">
                         Webmoney
@@ -865,7 +865,7 @@
                       value="SamsungPay">
                     <label for="SamsungPay" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/Samsung-pay.png" alt="Samsung pay">
+                        <img src="img/gallery/Samsung-pay.png" alt="Samsung pay">
                       </div>
                       <div class="payment-system__title">
                         Samsung pay
@@ -877,7 +877,7 @@
                       value="ApplePay">
                     <label for="ApplePay" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/Apple-pay.png" alt="Apple pay">
+                        <img src="img/gallery/Apple-pay.png" alt="Apple pay">
                       </div>
                       <div class="payment-system__title">
                         Apple pay
@@ -889,7 +889,7 @@
                       value="Моб.операторы">
                     <label for="MobOperators" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/Mob-operators.png" alt="Моб. операторы">
+                        <img src="img/gallery/Mob-operators.png" alt="Моб. операторы">
                       </div>
                       <div class="payment-system__title">
                         Моб. операторы
@@ -901,7 +901,7 @@
                       value="Криптовалюта">
                     <label for="Cryptocurrency" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/Cryptocurrency.png" alt="Криптовалюта">
+                        <img src="img/gallery/Cryptocurrency.png" alt="Криптовалюта">
                       </div>
                       <div class="payment-system__title">
                         Криптовалюта
@@ -912,7 +912,7 @@
                     <input type="radio" class="amount-selection__check" id="PayPal" name="paymentSystem" value="PayPal">
                     <label for="PayPal" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/PayPal.png" alt="PayPal">
+                        <img src="img/gallery/PayPal.png" alt="PayPal">
                       </div>
                       <div class="payment-system__title">
                         PayPal
@@ -924,7 +924,7 @@
                       value="GooglePay">
                     <label for="GooglePay" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
-                        <img src="../img/gallery/Google-pay.png" alt="Google pay">
+                        <img src="img/gallery/Google-pay.png" alt="Google pay">
                       </div>
                       <div class="payment-system__title">
                         Google pay
@@ -936,7 +936,7 @@
               </div>
               <div class="mod-arrow amount-selection__left">
                 <svg>
-                  <use xlink:href="../img/icons/sprite.svg#arrow-slider"></use>
+                  <use xlink:href="img/icons/sprite.svg#arrow-slider"></use>
                 </svg>
               </div>
               <button type="submit" class="btn btn_danger amount-selection__btn btn-disable-sum">Пополнить</button>
@@ -968,7 +968,7 @@
           <div class="scrollbar-overflow select-amount__content">
             <div class="mod-arrow select-amount__up">
               <svg>
-                <use xlink:href="../img/icons/sprite.svg#arrow-slider"></use>
+                <use xlink:href="img/icons/sprite.svg#arrow-slider"></use>
               </svg>
             </div>
             <div class="swiper select-amount__slider">
@@ -976,7 +976,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       50К
@@ -984,7 +984,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       100К
@@ -994,7 +994,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       250К
@@ -1002,7 +1002,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       500К
@@ -1012,7 +1012,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       1M
@@ -1020,7 +1020,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       2M
@@ -1030,7 +1030,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       5M
@@ -1038,7 +1038,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       10M
@@ -1050,7 +1050,7 @@
             </div>
             <div class="mod-arrow select-amount__down">
               <svg>
-                <use xlink:href="../img/icons/sprite.svg#arrow-slider"></use>
+                <use xlink:href="img/icons/sprite.svg#arrow-slider"></use>
               </svg>
             </div>
           </div>
@@ -1090,7 +1090,7 @@
           <div class="scrollbar-overflow select-amount__content">
             <div class="mod-arrow select-amount__up">
               <svg>
-                <use xlink:href="../img/icons/sprite.svg#arrow-slider"></use>
+                <use xlink:href="img/icons/sprite.svg#arrow-slider"></use>
               </svg>
             </div>
             <div class="swiper select-amount__slider">
@@ -1098,7 +1098,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       50К
@@ -1106,7 +1106,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       100К
@@ -1116,7 +1116,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       250К
@@ -1124,7 +1124,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       500К
@@ -1134,7 +1134,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       1M
@@ -1142,7 +1142,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       2M
@@ -1152,7 +1152,7 @@
                 <div class="swiper-slide select-amount__slide">
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       5M
@@ -1160,7 +1160,7 @@
                   </a>
                   <a href="##" class="select-amount__item">
                     <div class="select-amount__img">
-                      <img src="../img/gallery/card.png" alt="">
+                      <img src="img/gallery/card.png" alt="">
                     </div>
                     <div class="select-amount__value">
                       10M
@@ -1172,7 +1172,7 @@
             </div>
             <div class="mod-arrow select-amount__down">
               <svg>
-                <use xlink:href="../img/icons/sprite.svg#arrow-slider"></use>
+                <use xlink:href="img/icons/sprite.svg#arrow-slider"></use>
               </svg>
             </div>
           </div>
