--- a/roulette.html
+++ b/roulette.html
@@ -921,7 +921,9 @@
                         </div>
 
                         <div class="roulette__accardion-num">
-                          <img src="img/gallery/baks.png" alt="">
+                          <svg>
+                            <use xlink:href="img/icons/sprite.svg#dollar"></use>
+                          </svg>
                           <span>222K</span>
                         </div>
                       </div>
@@ -1089,7 +1091,9 @@
                         </div>
 
                         <div class="roulette__accardion-num">
-                          <img src="img/gallery/baks.png" alt="">
+                          <svg>
+                            <use xlink:href="img/icons/sprite.svg#dollar"></use>
+                          </svg>
                           <span>222K</span>
                         </div>
                       </div>
@@ -1256,7 +1260,9 @@
                         </div>
 
                         <div class="roulette__accardion-num">
-                          <img src="img/gallery/baks.png" alt="">
+                          <svg>
+                            <use xlink:href="img/icons/sprite.svg#dollar"></use>
+                          </svg>
                           <span>222K</span>
                         </div>
                       </div>
