--- a/profil.html
+++ b/profil.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="header__logo">
-              <a href="/">
+              <a href="https://durakroll.com/index.html">
                 <svg>
                   <use xlink:href="img/icons/sprite-edits.svg#logo"></use>
                 </svg>
@@ -46,12 +46,12 @@
 
             <!-- If not logged-in -->
             <div class="header__login" style="display: none;">
-              <a href="##" class="header__login-link">
+              <a href="#vk" class="header__login-link">
                 <svg>
                   <use xlink:href="img/icons/sprite.svg#vk_login"></use>
                 </svg>
               </a>
-              <a href="##" class="header__login-link">
+              <a href="#google" class="header__login-link">
                 <svg>
                   <use xlink:href="img/icons/sprite.svg#google_login"></use>
                 </svg>
@@ -59,7 +59,7 @@
             </div>
 
             <!-- If logged-in and has balance -->
-            <a href="##" class="header__balance">
+            <a href="https://durakroll.com/profile.html" class="header__balance">
               <span>1.32m</span>
             </a>
           </div>
@@ -68,29 +68,29 @@
             <nav class="header__nav">
               <ul class="header__list">
                 <li class="header__li">
-                  <a href="##" class="header__link">ЧЕСТНОСТЬ</a>
+                  <a href="https://durakroll.com/honesty.html" class="header__link">ЧЕСТНОСТЬ</a>
                 </li>
                 <li class="header__li">
-                  <a href="##" class="header__link">ПОМОЩЬ</a>
-                </li>
-
-                <li class="header__li">
-                  <a href="##" class="header__link">КОНТАКТЫ</a>
+                  <a href="https://durakroll.com/faq.html" class="header__link">ПОМОЩЬ</a>
                 </li>
 
                 <li class="header__li">
-                  <a href="##" class="header__link header__link_red">FREE</a>
+                  <a href="https://durakroll.com/contacts.html" class="header__link">КОНТАКТЫ</a>
+                </li>
+
+                <li class="header__li">
+                  <a href="https://durakroll.com/bonus.html" class="header__link header__link_red">FREE</a>
                 </li>
               </ul>
             </nav>
 
             <div class="header__profile">
-              <a href="##" class="header__avatar">
+              <a href="https://durakroll.com/profile.html" class="header__avatar">
                 <img src="img/gallery/avatar.png" alt="">
               </a>
 
               <div class="header__profile-info">
-                <a href="##" class="header__profile-name">
+                <a href="https://durakroll.com/profile.html" class="header__profile-name">
                   <!-- If not logged-in -->
                   <span style="display: none;">Anonymous</span>
 
@@ -104,7 +104,7 @@
 
                 <div class="header__profile-row">
                   <!-- If user logged-in -->
-                  <a href="##" class="header__profile-sum">
+                  <a href="https://durakroll.com/profile.html" class="header__profile-sum">
                     <div class="header__profile-sum-img">
                       <svg>
                         <use xlink:href="img/icons/sprite.svg#dollar"></use>
@@ -115,29 +115,29 @@
                   </a>
 
                   <!-- If user logged-in -->
-                  <a href="##" class="header__profile-link">
+                  <a href="#" class="header__profile-link">
                     Пополнить
                   </a>
 
                   <!-- If user logged-in -->
-                  <a href="##" class="header__profile-link">
+                  <a href="#" class="header__profile-link">
                     Вывести
                   </a>
 
                   <!-- If not logged-in -->
-                  <a href="##" class="header__profile-login" style="display: none;">
+                  <a href="#vk" class="header__profile-login" style="display: none;">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#vk_login"></use>
                     </svg>
                   </a>
-                  <a href="##" class="header__profile-login" style="display: none;">
+                  <a href="#google" class="header__profile-login" style="display: none;">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#google_login"></use>
                     </svg>
                   </a>
 
                   <!-- Login btn mobile shown if not logged-in-->
-                  <a href="##" class="header__login-btn" style="display: none;">
+                  <a href="#" class="header__login-btn" style="display: none;">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#login"></use>
                     </svg>
@@ -145,7 +145,7 @@
                 </div>
 
                 <!-- If user logged-in -->
-                <a href="##" class="header__profile-progressbar">
+                <a href="https://durakroll.com/profile.html" class="header__profile-progressbar">
                   <div class="header__profile-lvl header__profile-lvl_back">
                     17<span>ур</span>
                   </div>
@@ -158,11 +158,11 @@
                 </a>
 
                 <div class="header__btns">
-                  <a href="##" class="header__profile-btn">
+                  <a href="#" class="header__profile-btn">
                     Пополнить
                   </a>
 
-                  <a href="##" class="header__profile-btn">
+                  <a href="#" class="header__profile-btn">
                     Вывести
                   </a>
                 </div>
@@ -683,7 +683,7 @@
                                   <div class="profil__name-text">
                                     <span>Nickname</span>
                                   </div>
-                                  <a href="##">
+                                  <a href="#">
                                     <svg class="profil__icon-settings">
                                       <use xlink:href="img/icons/sprite.svg#setings"></use>
                                     </svg>
@@ -693,8 +693,8 @@
                             </div>
 
                             <div class="profil__btns">
-                              <a href="##" class="profil__btn profil__btn_google">Войти с помощью Google</a>
-                              <a href="##" class="profil__btn profil__btn_vk">Войти с помощью VK</a>
+                              <a href="#google" class="profil__btn profil__btn_google">Войти с помощью Google</a>
+                              <a href="#vk" class="profil__btn profil__btn_vk">Войти с помощью VK</a>
                             </div>
                           </div>
                         </div>
@@ -1134,17 +1134,17 @@
       <div class="container">
         <div class="footer__row">
           <div class="footer__info">
-            <a href="/" class="footer__logo">
+            <a href="https://durakroll.com/index.html" class="footer__logo">
               <svg>
                 <use xlink:href="img/icons/sprite-edits.svg#logofooter"></use>
               </svg>
             </a>
 
-            <a href=" https://vk.com/durak24" target="blank"
+            <a href="https://vk.com/durak24" target="_blank"
               class="footer__soc-item footer__soc-item footer__soc-item_vk">
               <img src="img/gallery/vk.png" alt="">
             </a>
-            <a href="https://www.youtube.com/channel/UCVwr3DUjn1LRrTkt44RC3_w" target="blank"
+            <a href="https://www.youtube.com/channel/UCVwr3DUjn1LRrTkt44RC3_w" target="_blank"
               class="footer__soc-item footer__soc-item_yt">
               <svg>
                 <use xlink:href="img/icons/sprite-edits.svg#youtube"></use>
