--- a/faq.html
+++ b/faq.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="header__logo">
-              <a href="/">
+              <a href="https://durakroll.com/index.html">
                 <svg>
                   <use xlink:href="img/icons/sprite-edits.svg#logo"></use>
                 </svg>
@@ -47,12 +47,12 @@
 
             <!-- If not logged-in -->
             <div class="header__login" style="display: none;">
-              <a href="##" class="header__login-link">
+              <a href="#vk" class="header__login-link">
                 <svg>
                   <use xlink:href="img/icons/sprite.svg#vk_login"></use>
                 </svg>
               </a>
-              <a href="##" class="header__login-link">
+              <a href="#google" class="header__login-link">
                 <svg>
                   <use xlink:href="img/icons/sprite.svg#google_login"></use>
                 </svg>
@@ -60,7 +60,7 @@
             </div>
 
             <!-- If logged-in and has balance -->
-            <a href="##" class="header__balance">
+            <a href="https://durakroll.com/profile.html" class="header__balance">
               <span>1.32m</span>
             </a>
           </div>
@@ -69,29 +69,29 @@
             <nav class="header__nav">
               <ul class="header__list">
                 <li class="header__li">
-                  <a href="##" class="header__link">ЧЕСТНОСТЬ</a>
+                  <a href="https://durakroll.com/honesty.html" class="header__link">ЧЕСТНОСТЬ</a>
                 </li>
                 <li class="header__li">
-                  <a href="##" class="header__link">ПОМОЩЬ</a>
-                </li>
-
-                <li class="header__li">
-                  <a href="##" class="header__link">КОНТАКТЫ</a>
+                  <a href="https://durakroll.com/faq.html" class="header__link">ПОМОЩЬ</a>
                 </li>
 
                 <li class="header__li">
-                  <a href="##" class="header__link header__link_red">FREE</a>
+                  <a href="https://durakroll.com/contacts.html" class="header__link">КОНТАКТЫ</a>
+                </li>
+
+                <li class="header__li">
+                  <a href="https://durakroll.com/bonus.html" class="header__link header__link_red">FREE</a>
                 </li>
               </ul>
             </nav>
 
             <div class="header__profile">
-              <a href="##" class="header__avatar">
+              <a href="https://durakroll.com/profile.html" class="header__avatar">
                 <img src="img/gallery/avatar.png" alt="">
               </a>
 
               <div class="header__profile-info">
-                <a href="##" class="header__profile-name">
+                <a href="https://durakroll.com/profile.html" class="header__profile-name">
                   <!-- If not logged-in -->
                   <span style="display: none;">Anonymous</span>
 
@@ -105,7 +105,7 @@
 
                 <div class="header__profile-row">
                   <!-- If user logged-in -->
-                  <a href="##" class="header__profile-sum">
+                  <a href="https://durakroll.com/profile.html" class="header__profile-sum">
                     <div class="header__profile-sum-img">
                       <svg>
                         <use xlink:href="img/icons/sprite.svg#dollar"></use>
@@ -116,29 +116,29 @@
                   </a>
 
                   <!-- If user logged-in -->
-                  <a href="##" class="header__profile-link">
+                  <a href="#" class="header__profile-link">
                     Пополнить
                   </a>
 
                   <!-- If user logged-in -->
-                  <a href="##" class="header__profile-link">
+                  <a href="#" class="header__profile-link">
                     Вывести
                   </a>
 
                   <!-- If not logged-in -->
-                  <a href="##" class="header__profile-login" style="display: none;">
+                  <a href="#vk" class="header__profile-login" style="display: none;">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#vk_login"></use>
                     </svg>
                   </a>
-                  <a href="##" class="header__profile-login" style="display: none;">
+                  <a href="#google" class="header__profile-login" style="display: none;">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#google_login"></use>
                     </svg>
                   </a>
 
                   <!-- Login btn mobile shown if not logged-in-->
-                  <a href="##" class="header__login-btn" style="display: none;">
+                  <a href="#" class="header__login-btn" style="display: none;">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#login"></use>
                     </svg>
@@ -146,7 +146,7 @@
                 </div>
 
                 <!-- If user logged-in -->
-                <a href="##" class="header__profile-progressbar">
+                <a href="https://durakroll.com/profile.html" class="header__profile-progressbar">
                   <div class="header__profile-lvl header__profile-lvl_back">
                     17<span>ур</span>
                   </div>
@@ -159,11 +159,11 @@
                 </a>
 
                 <div class="header__btns">
-                  <a href="##" class="header__profile-btn">
+                  <a href="#" class="header__profile-btn">
                     Пополнить
                   </a>
 
-                  <a href="##" class="header__profile-btn">
+                  <a href="#" class="header__profile-btn">
                     Вывести
                   </a>
                 </div>
@@ -1588,17 +1588,17 @@
       <div class="container">
         <div class="footer__row">
           <div class="footer__info">
-            <a href="/" class="footer__logo">
+            <a href="https://durakroll.com/index.html" class="footer__logo">
               <svg>
                 <use xlink:href="img/icons/sprite-edits.svg#logofooter"></use>
               </svg>
             </a>
 
-            <a href=" https://vk.com/durak24" target="blank"
+            <a href="https://vk.com/durak24" target="_blank"
               class="footer__soc-item footer__soc-item footer__soc-item_vk">
               <img src="img/gallery/vk.png" alt="">
             </a>
-            <a href="https://www.youtube.com/channel/UCVwr3DUjn1LRrTkt44RC3_w" target="blank"
+            <a href="https://www.youtube.com/channel/UCVwr3DUjn1LRrTkt44RC3_w" target="_blank"
               class="footer__soc-item footer__soc-item_yt">
               <svg>
                 <use xlink:href="img/icons/sprite-edits.svg#youtube"></use>
