chat autocomplete off

--- a/contact.html
+++ b/contact.html
@@ -642,7 +642,8 @@
                 </div>
 
                 <div class="online-chat__input-block">
-                  <input placeholder="Написать сообщение..." name="chat-message" type="text" class="online-chat__input">
+                  <input placeholder="Написать сообщение..." name="chat-message" type="text" class="online-chat__input"
+                    autocomplete="off">
                   <div class="online-chat__icon-doc">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#document"></use>
@@ -670,7 +671,8 @@
                             <use xlink:href="img/icons/sprite.svg#youtube"></use>
                           </svg>
                         </a>
-                        <a href="https://www.youtube.com/channel/UCVwr3DUjn1LRrTkt44RC3_w" class="contact__soc-text-block">
+                        <a href="https://www.youtube.com/channel/UCVwr3DUjn1LRrTkt44RC3_w"
+                          class="contact__soc-text-block">
                           <h3 class="contact__soc-title contact__soc-title_red">ЮТУБ КАНАЛ</h3>
                           <p class="contact__soc-text">Durak24 | Дурак онлайн</p>
                         </a>
