--- a/profil.html
+++ b/profil.html
@@ -639,7 +639,8 @@
                 </div>
 
                 <div class="online-chat__input-block">
-                  <input placeholder="Написать сообщение..." name="chat-message" type="text" class="online-chat__input">
+                  <input placeholder="Написать сообщение..." name="chat-message" type="text" class="online-chat__input"
+                    autocomplete="off">
                   <div class="online-chat__icon-doc">
                     <svg>
                       <use xlink:href="img/icons/sprite.svg#document"></use>
