avatar change fix

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             <form class="profile-settings__row">
               <div class="profile-settings__item-avatar">
                 <div class="profile-settings__avatar" id="imgAva">
-                  <img data-value="0" src="img/avatar/user/avatar.png" alt="nickname" id="imgAvaImg">
+                  <img data-value="0" src="img/avatar/user/avatar.png" alt="nickname" id="profileImage">
                 </div>
               </div>
               <div class="profile-settings__item">
