--- a/roulette.html
+++ b/roulette.html
@@ -59,7 +59,7 @@
             </div>
 
             <!-- If logged-in and has balance -->
-            <a href="https://durakroll.com/profile.html" class="header__balance">
+            <a href="https://durakroll.com/profil.html" class="header__balance">
               <span>1.32m</span>
             </a>
           </div>
@@ -75,22 +75,22 @@
                 </li>
 
                 <li class="header__li">
-                  <a href="https://durakroll.com/contacts.html" class="header__link">КОНТАКТЫ</a>
+                  <a href="https://durakroll.com/contact.html" class="header__link">КОНТАКТЫ</a>
                 </li>
 
                 <li class="header__li">
-                  <a href="https://durakroll.com/bonus.html" class="header__link header__link_red">FREE</a>
+                  <a href="https://durakroll.com/bonus-currency.html" class="header__link header__link_red">FREE</a>
                 </li>
               </ul>
             </nav>
 
             <div class="header__profile">
-              <a href="https://durakroll.com/profile.html" class="header__avatar">
+              <a href="https://durakroll.com/profil.html" class="header__avatar">
                 <img src="img/gallery/avatar.png" alt="">
               </a>
 
               <div class="header__profile-info">
-                <a href="https://durakroll.com/profile.html" class="header__profile-name">
+                <a href="https://durakroll.com/profil.html" class="header__profile-name">
                   <!-- If not logged-in -->
                   <span style="display: none;">Anonymous</span>
 
@@ -104,7 +104,7 @@
 
                 <div class="header__profile-row">
                   <!-- If user logged-in -->
-                  <a href="https://durakroll.com/profile.html" class="header__profile-sum">
+                  <a href="https://durakroll.com/profil.html" class="header__profile-sum">
                     <div class="header__profile-sum-img">
                       <svg>
                         <use xlink:href="img/icons/sprite.svg#dollar"></use>
@@ -145,7 +145,7 @@
                 </div>
 
                 <!-- If user logged-in -->
-                <a href="https://durakroll.com/profile.html" class="header__profile-progressbar">
+                <a href="https://durakroll.com/profil.html" class="header__profile-progressbar">
                   <div class="header__profile-lvl header__profile-lvl_back">
                     17<span>ур</span>
                   </div>
@@ -168,8 +168,8 @@
                 </div>
 
               </div>
-
             </div>
+
           </div>
 
         </div>
@@ -1627,7 +1627,8 @@
 
                   </div>
                   <div class="swiper-slide amount-selection__slide">
-                    <input type="radio" class="amount-selection__check" id="Qiwi" name="paymentSystem" value="Qiwi кошелёк">
+                    <input type="radio" class="amount-selection__check" id="Qiwi" name="paymentSystem"
+                      value="Qiwi кошелёк">
                     <label for="Qiwi" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
                         <img src="img/gallery/qivi.png" alt="Qiwi кошелёк">
@@ -1649,7 +1650,8 @@
                     </label>
                   </div>
                   <div class="swiper-slide amount-selection__slide">
-                    <input type="radio" class="amount-selection__check" id="Webmoney" name="paymentSystem" value="Webmoney">
+                    <input type="radio" class="amount-selection__check" id="Webmoney" name="paymentSystem"
+                      value="Webmoney">
                     <label for="Webmoney" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
                         <img src="img/gallery/Webmoney.png" alt="Webmoney">
@@ -1672,7 +1674,8 @@
                     </label>
                   </div>
                   <div class="swiper-slide amount-selection__slide">
-                    <input type="radio" class="amount-selection__check" id="ApplePay" name="paymentSystem" value="ApplePay">
+                    <input type="radio" class="amount-selection__check" id="ApplePay" name="paymentSystem"
+                      value="ApplePay">
                     <label for="ApplePay" class="amount-selection__card payment-system">
                       <div class="payment-system__img">
                         <img src="img/gallery/Apple-pay.png" alt="Apple pay">
@@ -1913,8 +1916,8 @@
               <svg>
                 <use xlink:href="img/icons/sprite.svg#dollar"></use>
               </svg>
-              <input inputmode="numeric" class="s-am-input__input" placeholder="Введите ваш баланс в Дураке..." type="tel"
-                step="1" name="add-sum" class="roulette__table-input">
+              <input inputmode="numeric" class="s-am-input__input" placeholder="Введите ваш баланс в Дураке..."
+                type="tel" step="1" name="add-sum" class="roulette__table-input">
               <div class="s-am-input__msg">Вы должны иметь минимум 100 кредитов!</div>
             </div>
           </div>
