--- a/honesty.html
+++ b/honesty.html
@@ -60,7 +60,7 @@
             </div>
 
             <!-- If logged-in and has balance -->
-            <a href="https://durakroll.com/profile.html" class="header__balance">
+            <a href="https://durakroll.com/profil.html" class="header__balance">
               <span>1.32m</span>
             </a>
           </div>
@@ -76,22 +76,22 @@
                 </li>
 
                 <li class="header__li">
-                  <a href="https://durakroll.com/contacts.html" class="header__link">КОНТАКТЫ</a>
+                  <a href="https://durakroll.com/contact.html" class="header__link">КОНТАКТЫ</a>
                 </li>
 
                 <li class="header__li">
-                  <a href="https://durakroll.com/bonus.html" class="header__link header__link_red">FREE</a>
+                  <a href="https://durakroll.com/bonus-currency.html" class="header__link header__link_red">FREE</a>
                 </li>
               </ul>
             </nav>
 
             <div class="header__profile">
-              <a href="https://durakroll.com/profile.html" class="header__avatar">
+              <a href="https://durakroll.com/profil.html" class="header__avatar">
                 <img src="img/gallery/avatar.png" alt="">
               </a>
 
               <div class="header__profile-info">
-                <a href="https://durakroll.com/profile.html" class="header__profile-name">
+                <a href="https://durakroll.com/profil.html" class="header__profile-name">
                   <!-- If not logged-in -->
                   <span style="display: none;">Anonymous</span>
 
@@ -105,7 +105,7 @@
 
                 <div class="header__profile-row">
                   <!-- If user logged-in -->
-                  <a href="https://durakroll.com/profile.html" class="header__profile-sum">
+                  <a href="https://durakroll.com/profil.html" class="header__profile-sum">
                     <div class="header__profile-sum-img">
                       <svg>
                         <use xlink:href="img/icons/sprite.svg#dollar"></use>
@@ -146,7 +146,7 @@
                 </div>
 
                 <!-- If user logged-in -->
-                <a href="https://durakroll.com/profile.html" class="header__profile-progressbar">
+                <a href="https://durakroll.com/profil.html" class="header__profile-progressbar">
                   <div class="header__profile-lvl header__profile-lvl_back">
                     17<span>ур</span>
                   </div>
@@ -169,8 +169,8 @@
                 </div>
 
               </div>
-
             </div>
+
           </div>
 
         </div>
