link to help fix

--- a/contact.html
+++ b/contact.html
@@ -692,7 +692,7 @@
 
                     </div>
                     <div class="contact__support">
-                      <a target="_blank" href="mailto:support@durakroll.com" class="contact__support-img">
+                      <a href="https://durakroll.com/faq.html" class="contact__support-img">
                         <svg class="support-icon">
                           <use xlink:href="img/icons/sprite.svg#support"></use>
                         </svg>
